--- a/.github/workflows/xray_docker_reality.yml
+++ b/.github/workflows/xray_docker_reality.yml
@@ -23,11 +23,12 @@ jobs:
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v2.5.0
 
-      - name: Docker Login
+      - name: GitHub Container Registry Login
         uses: docker/login-action@v2.1.0
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract first line of commit message
         shell: bash
@@ -44,6 +45,6 @@ jobs:
           file: ./reality/Dockerfile
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
           tags: |
-            wulabing/xray_docker_reality:${{env.TAG_NAME}}
-            wulabing/xray_docker_reality:latest
+            ghcr.io/driftingwind/xray_docker_reality:${{env.TAG_NAME}}
+            ghcr.io/driftingwind/xray_docker_reality:latest
           push: true
