--- a/.github/workflows/xray_docker_reality.yml
+++ b/.github/workflows/xray_docker_reality.yml
@@ -2,8 +2,8 @@ name: xray_docker_reality
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 20 */2 * *'  # UTC 20:00  UTC+8 04:00
+  #schedule:
+  #  - cron: '0 20 */2 * *'  # UTC 20:00  UTC+8 04:00
   push:
     paths:
       - 'reality/Dockerfile'
@@ -56,7 +56,7 @@ jobs:
           context: ./reality
           file: ./reality/Dockerfile
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
-          tags: # |
-          # ghcr.io/driftingwind/xray_docker_reality:${{env.VERSION}}-ubuntu-22.04-xray-${{env.XRAY_VERSION}}
+          tags:  |
+            ghcr.io/driftingwind/xray_docker_reality:${{env.VERSION}}-ubuntu-22.04-xray-${{env.XRAY_VERSION}}
             ghcr.io/driftingwind/xray_docker_reality:latest
           push: true
