--- a/.github/workflows/xray_docker_xhttp_reality.yml
+++ b/.github/workflows/xray_docker_xhttp_reality.yml
@@ -21,10 +21,10 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v3
@@ -51,12 +51,12 @@ jobs:
           echo "XRAY_VERSION=$LATEST_VERSION" >> $GITHUB_ENV
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v4.0.0
+        uses: docker/build-push-action@v6
         with:
           context: ./xhttp_reality
           file: ./xhttp_reality/Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
+          platforms: linux/amd64
           tags: |
-            ghcr.io/driftingwind/xray_docker_xhttp_reality:${{env.VERSION}}-ubuntu-22.04-xray-${{env.XRAY_VERSION}}
+            ghcr.io/driftingwind/xray_docker_xhttp_reality:${{env.VERSION}}-ubuntu-latest-xray-${{env.XRAY_VERSION}}
             ghcr.io/driftingwind/xray_docker_xhttp_reality:latest
           push: true
