--- a/.github/workflows/xray_docker_reality.yml
+++ b/.github/workflows/xray_docker_reality.yml
@@ -2,29 +2,13 @@ name: xray_docker_reality
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 20 */2 * *'  # UTC 20:00  UTC+8 04:00
-  push:
-    paths:
-      - 'reality/Dockerfile'
-      - '.github/workflows/xray_docker_reality.yml'
-      - 'reality/entrypoint.sh'
-      - 'reality/config.json'
-      - 'reality/VERSION'
-  pull_request:
-    paths:
-      - 'reality/Dockerfile'
-      - '.github/workflows/xray_docker_reality.yml'
-      - 'reality/entrypoint.sh'
-      - 'reality/config.json'
-      - 'reality/VERSION'
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v3
@@ -32,11 +16,12 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
-      - name: Docker Login
+      - name: GitHub Container Registry Login
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract first line of commit message
         shell: bash
@@ -50,12 +35,12 @@ jobs:
           echo "XRAY_VERSION=$LATEST_VERSION" >> $GITHUB_ENV
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v6.18.0
+        uses: docker/build-push-action@v6
         with:
           context: ./reality
           file: ./reality/Dockerfile
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
           tags: |
-            wulabing/xray_docker_reality:${{env.VERSION}}-ubuntu-22.04-xray-${{env.XRAY_VERSION}}
-            wulabing/xray_docker_reality:latest
+            ghcr.io/driftingwind/xray_docker_reality:${{env.VERSION}}-xray-${{env.XRAY_VERSION}}
+            ghcr.io/driftingwind/xray_docker_reality:latest
           push: true
