--- a/.github/workflows/xray_docker_xhttp_reality.yml
+++ b/.github/workflows/xray_docker_xhttp_reality.yml
@@ -2,26 +2,10 @@ name: xray_docker_xhttp_reality
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 21 */2 * *'  # UTC 21:00  UTC+8 05:00
-  push:
-    paths:
-      - 'xhttp_reality/Dockerfile'
-      - '.github/workflows/xray_docker_xhttp_reality.yml'
-      - 'xhttp_reality/entrypoint.sh'
-      - 'xhttp_reality/config.json'
-      - 'xhttp_reality/VERSION'
-  pull_request:
-    paths:
-      - 'xhttp_reality/Dockerfile'
-      - '.github/workflows/xray_docker_xhttp_reality.yml'
-      - 'xhttp_reality/entrypoint.sh'
-      - 'xhttp_reality/config.json'
-      - 'xhttp_reality/VERSION'
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -32,11 +16,12 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
-      - name: Docker Login
+      - name: GitHub Container Registry Login
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract first line of commit message
         shell: bash
@@ -50,12 +35,13 @@ jobs:
           echo "XRAY_VERSION=$LATEST_VERSION" >> $GITHUB_ENV
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v6.18.0
+        uses: docker/build-push-action@v6
         with:
           context: ./xhttp_reality
           file: ./xhttp_reality/Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
+#          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
+          platforms: linux/amd64
           tags: |
-            wulabing/xray_docker_xhttp_reality:${{env.VERSION}}-ubuntu-22.04-xray-${{env.XRAY_VERSION}}
-            wulabing/xray_docker_xhttp_reality:latest
+            ghcr.io/driftingwind/xray_docker_xhttp_reality:${{env.VERSION}}-xray-${{env.XRAY_VERSION}}
+            ghcr.io/driftingwind/xray_docker_xhttp_reality:latest
           push: true
